# mri_workflow

./: .gitignore  LICENSE  README.md  action.py  actions.py  base.py  base_2.py  base_3.py  config.json  config.py  fmripre.py  main.py  meicapreprocess.py  pyproject.toml  run.py  test.ipynb  test.py  test2.ipynb  test_2.py  test_3.py  workflows.py  works
cli/: parser.py
mefmripp/: actions.py  log.py  meicapreprocess.py  parse.py  shell_commands.py  workflow.py  workflows.py
mefmriprep/: test.ipynb
mefmriprep/utils/: log.py  shell_commands.py
mefmriprep/workflows/: meicapreprocess.py
src/mri_workflow/: base.py
src/neuroworkflow/: __init__.py  base.py
test/derivatives/log/: INFO
test/derivatives/log/derivatives/: DEBUG
test/derivatives/log/sub-001/: DEBUG  INFO
test/derivatives/log/sub-002/: DEBUG  INFO
test/derivatives/log/sub-s001/: DEBUG  ERROR  INFO
test/derivatives/log/sub-s002/: DEBUG  ERROR  INFO
utils/: log.py  shell_commands.py
workflows/: meicapreprocess.py
